# microservices-go

./: .gitignore  BUILD.bazel  go.work
.githooks/: commit-msg
article/: go.mod
article/cmd/app/: BUILD.bazel  main.go
article/internal/: BUILD.bazel  internal.go
article/pkg/: BUILD.bazel  pkg.go  pkg_test.go
image/: go.mod
image/cmd/app/: BUILD.bazel  main.go
image/internal/: BUILD.bazel  internal.go
image/pkg/: BUILD.bazel  pkg.go  pkg_test.go
pkg/: BUILD.bazel  go.mod  pkg.go
user/: go.mod
user/cmd/app/: BUILD.bazel  main.go
user/internal/: BUILD.bazel  internal.go
user/pkg/: BUILD.bazel  pkg.go  pkg_test.go
