load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pkg",
    srcs = ["pkg.go"],
    importpath = "github.com/aristorinjuang/microservices-go/article/pkg",
    visibility = ["//visibility:public"],
)

go_test(
    name = "pkg_test",
    srcs = ["pkg_test.go"],
    embed = [":pkg"],
)
